update with balzac and proust

--- a/global_table.ipynb
+++ b/global_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,6 @@
       "File done : 1861_Erckmann-Chatrian_Confidences-d-un-joueur-de-clarinette.xml\n",
       "File done : 1920_Toulet-Paul-Jean_La-jeune-fille-verte-roman.xml\n",
       "File done : 1961_Troyat-Henri_La-gloire-des-vaincus.xml\n",
-      "File done : 1901_Maël-Pierre_Un-mousse-de-Surcouf.xml\n",
       "File done : 1888_Malot-Hector_Conscience.xml\n",
       "File done : 1944_Aragon-Louis_Aurelien.xml\n",
       "File done : 1951_Rebatet-Lucien_Les-Deux-Etendards.xml\n",
@@ -125,7 +124,6 @@
       "File done : 1977_Ernaux-Annie_Ce-qu-ils-disent-ou-rien.xml\n",
       "File done : 1843_Doutre-Joseph_Les-fiances-de-1812.xml\n",
       "File done : 1949_Simenon-Georges_Mon-ami-Maigret.xml\n",
-      "File done : 1919_Loti-Pierre_Prime-jeunesse.xml\n",
       "File done : 1897_Roussel-Raymond_La-doublure.xml\n",
       "File done : 1994_Rolin-Olivier_Port-Soudan.xml\n",
       "File done : 1921_Leroux-Gaston_Cheri-Bibi-et-Cecily.xml\n",
@@ -157,6 +155,7 @@
       "File done : 1899_Adam-Paul_La-Force.xml\n",
       "File done : 1926_Mac-Orlan-Pierre_Les-clients-du-Bon-Chien-Jaune.xml\n",
       "File done : 1967_Simenon-Georges_Le-voleur-de-Maigret.xml\n",
+      "File done : 1848_Balzac-Honore-de_Les-Parents-pauvres-La-Cousine-BetteFC.xml\n",
       "File done : 1957_Pagnol-Marcel_Le-Chateau-de-ma-mere.xml\n",
       "File done : 1956_Thomas-Henri_La-nuit-de-Londres.xml\n",
       "File done : 1890_Pont-Jest-Rene-de_Le-Fleuve-des-perles-(L-araignee-Rouge).xml\n",
@@ -192,6 +191,7 @@
       "File done : 1997_Bergounioux-Pierre_L-empreinte.xml\n",
       "File done : 1961_San-Antonio_San-Antonio-chez-les-Mac.xml\n",
       "File done : 1892_Colomb-Josephine_Les-Conquetes-d-Hermine.xml\n",
+      "File done : 1913_Proust-Marcel_Du-cote-de-chez-Swann-A-la-recherche-du-temps-perdu.xml\n",
       "File done : 1881_France-Anatole_Le-crime-de-Sylvestre-Bonnard.xml\n",
       "File done : 1858_Gautier-Theophile_Le-roman-de-la-momie.xml\n",
       "File done : 1977_Simonin-Albert_Confessions-d-un-enfant-de-La-Chapelle.xml\n",
@@ -227,6 +227,7 @@
       "File done : 1895_France-Anatole_Le-Jardin-d-Epicure.xml\n",
       "File done : 1941_Morand-Paul_L-homme-presse.xml\n",
       "File done : 2014_Modiano-Patrick_Pour-que-tu-ne-te-perdes-pas-dans-le-quartier.xml\n",
+      "File done : 1843_Balzac-Honore-de_Illusions-perdues.xml\n",
       "File done : 1846_Feval-Paul-(pere)_Le-Fils-du-diable-Tome-I.xml\n",
       "File done : 2001_Simon-Claude_Le-tramway.xml\n",
       "File done : 2000_Djian-Philippe_Vers-chez-les-blancs.xml\n",
@@ -246,15 +247,15 @@
       "File done : 1876_Malot-Hector_L-Auberge-du-monde-Tome-1.xml\n",
       "File done : 1952_Calet-Henri_Un-Grand-Voyage.xml\n",
       "File done : 2014_Rouaud-Jean_Un-peu-la-guerre.xml\n",
-      "File done : 1908_Dhanys-Marcel_Marcel-Dhanys-Le-Roman-du-grand-Conde-Edition-3-(1908).xml\n",
-      "File done : 1858_Segur-comtesse-de_Les-Petites-Filles-Modeles.xml\n",
-      "File done : 1869_Stolz-Madame-de_La-Maison-roulante.xml\n"
+      "File done : 1908_Dhanys-Marcel_Marcel-Dhanys-Le-Roman-du-grand-Conde-Edition-3-(1908).xml\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "File done : 1858_Segur-comtesse-de_Les-Petites-Filles-Modeles.xml\n",
+      "File done : 1869_Stolz-Madame-de_La-Maison-roulante.xml\n",
       "File done : 1894_Louÿs-Pierre_Les-chansons-de-Bilitis.xml\n",
       "File done : 1961_San-Antonio_Ne-mangez-pas-la-consigne.xml\n",
       "File done : 1930_Malraux-Andre_La-voie-royale.xml\n",
@@ -398,15 +399,14 @@
       "File done : 1845_Sand-George_Le-meunier-d-Angibault.xml\n",
       "File done : 1864_ Verne-Jules_Voyage-au-centre-de-la-Terre.xml\n",
       "File done : 2013_Rolin-Jean_Ormuz.xml\n",
-      "File done : 1914_Roussel-Raymond_Locus-Solus.xml\n",
-      "File done : 1887_Guy-de-Maupassant_Pierre-et-Jean.xml\n",
-      "File done : 1913_Proust-Marcel_a-la-recherche-du-temps-perdu-I.xml\n"
+      "File done : 1914_Roussel-Raymond_Locus-Solus.xml\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "File done : 1887_Guy-de-Maupassant_Pierre-et-Jean.xml\n",
       "File done : 1933_Leblanc-Maurice_Victor-de-la-Brigade-mondaine.xml\n",
       "File done : 1911_Apollinaire-Guillaume_Les-exploits-d-un-jeune-don-Juan.xml\n",
       "File done : 1998_Rouaud-Jean_Pour-vos-cadeaux.xml\n",
@@ -429,7 +429,6 @@
       "File done : 1969_Montherlant-Henry-de_Les-garçons.xml\n",
       "File done : 1910_Leroux-Gaston_Le-fantome-de-l-Opera.xml\n",
       "File done : 1941_Blanchot-Maurice_Thomas-l-Obscur.xml\n",
-      "File done : 1840_Granier-de-Cassagnac-Adolphe_Danaë.xml\n",
       "File done : 1989_Gailly-Christian_K.622.xml\n",
       "File done : 2006_Jourde-Pierre_L-Heure-et-l-ombre.xml\n",
       "File done : 1982_Barjavel-Rene_La-Tempete.xml\n",
@@ -441,10 +440,12 @@
       "File done : 1953_Simonin-Albert_Touchez-pas-au-grisbi.xml\n",
       "File done : 1970_Deon-Michel_Les-poneys-sauvages.xml\n",
       "File done : 1844_Dumas-Alexandre_Les-Trois-Mousquetaires.xml\n",
+      "File done : 1955_Dhotel-Andre_Le-pays-ou-l-on-n-arrive-jamais.xml\n",
       "File done : 1901_Colette_Claudine-a-Paris.xml\n",
       "File done : 1922_Margueritte-Victor_La-garçonne.xml\n",
       "File done : 2008_Kerangal-Maylis-de_Corniche-Kennedy.xml\n",
       "File done : 1899_Le-Rouge-Gustave_La-Conspiration-des-milliardaires-Tome-I.xml\n",
+      "File done : 1939_Leiris-Michel_L-Age-d-homme.xml\n",
       "File done : 1989_Villard-Marc_La-dame-est-une-trainee.xml\n",
       "File done : 1920_Boylesve-Rene_Le-carrosse-aux-deux-lezards-verts.xml\n",
       "File done : 1947_Renard-Maurice_Le-Maitre-de-la-lumiere.xml\n",
@@ -482,12 +483,11 @@
       "File done : 1913_Lermina-Jules_L-effrayante-aventure.xml\n",
       "File done : 1961_Robbe-Grillet-Alain_L-Annee-derniere-a-Marienbad.xml\n",
       "File done : 1987_Rolin-Olivier_Bar-des-flots-noirs.xml\n",
-      "File done : 1858_Ponson-du-Terrail-Pierre_Rocambole-Le-Club-des-valets-de-cœur-Tome-I.xml\n",
-      "File done : 1939_Leiris-Michel_L-Âge-d-homme.xml\n",
       "File done : 1983_Echenoz-Jean_Cherokee.xml\n",
       "File done : 1882_Toudouze-Gustave_Gustave-Toudouze-La-Seductrice-roman-parisien-(1882).xml\n",
       "File done : 1980_A.D.G._Pour-venger-Pepere.xml\n",
       "File done : 1911_Larbaud-Valery_Fermina-Marquez.xml\n",
+      "File done : 1846_Balzac-Honore-de_Une-tenebreuse-affaire.xml\n",
       "File done : 1997_Grange-Jean-Christophe_Les-rivieres-pourpres.xml\n",
       "File done : 1871_Dumas-Alexandre-Pere_La-fille-du-marquis-II.xml\n",
       "File done : 1881_Flaubert-Gustave_Bouvard-et-Pecuchet.xml\n",
@@ -596,7 +596,6 @@
       "File done : 1876_Lermina-Jules_Les-Loups-de-Paris-Tome-I-Le-Club-des-morts.xml\n",
       "File done : 1926_Kessel-Joseph_Les-Captifs.xml\n",
       "File done : 1958_Aragon-Louis_La-semaine-sainte.xml\n",
-      "File done : 2004_Angot-Christine_Une-partie-du-cœur.xml\n",
       "File done : 1910_Renard-Maurice_Le-Peril-Bleu.xml\n",
       "File done : 1996_Bouraoui-Nina_Le-Bal-des-murenes.xml\n",
       "File done : 1968_Modiano-Patrick_La-Place-de-l-etoile.xml\n",
@@ -725,6 +724,7 @@
       "File done : 1890_Lemonnier-Camille_Le-possede-etude-passionnelle.xml\n",
       "File done : 1918_Gide-Andre_Si-le-grain-se-meurt.xml\n",
       "File done : 2012_Nothomb-Amelie_Barbe-bleue.xml\n",
+      "File done : 1844_Balzac-Honore-de_Splendeurs-et-miseres-des-courtisanesFC.xml\n",
       "File done : 1999_Adam-Olivier_Je-vais-bien-ne-t-en-fais-pas.xml\n",
       "File done : 1965_San-Antonio_La-rate-au-court-bouillon.xml\n",
       "File done : 1908_Aicard-Jean_Maurin-des-Maures.xml\n",
@@ -742,6 +742,7 @@
       "File done : 1869_Flaubert-Gustave_L-Education-sentimentale.xml\n",
       "File done : 1952_Blondin-Antoine_Les-Enfants-Du-Bon-Dieu.xml\n",
       "File done : 1984_Djian-Philippe_Zone-erogene.xml\n",
+      "File done : 1840_Granier-de-Cassagnac-Adolphe_Danae.xml\n",
       "File done : 1917_Mac-Orlan-Pierre_Le-chant-de-l-equipage.xml\n",
       "File done : 1871_Dumas-Alexandre-Pere_Le-docteur-mysterieux-II.xml\n",
       "File done : 1871_Daudet-Alphonse_Tartarin-de-Tarascon.xml\n",
@@ -804,6 +805,7 @@
       "File done : 1894_Stendhal_Lucien-Leuwen.xml\n",
       "File done : 1863_Pontmartin-Armand-de_Les-brûleurs-de-temples.xml\n",
       "File done : 1908_Savine-Albert_L-Assassinat-de-la-Duchesse-de-Praslin.xml\n",
+      "File done : 1918_Proust-Marcel_A-l-ombre-des-jeunes-filles-en-fleurs-A-la-recherche-du-temps-perdu.xml\n",
       "File done : 2015_Claro_Dans-la-queue-le-venin.xml\n",
       "File done : 1982_Modiano-Patrick_De-si-braves-garçons.xml\n",
       "File done : 1869_Gautier-Judith_Le-Dragon-Imperial.xml\n",
@@ -823,6 +825,7 @@
       "File done : 1877_Flaubert-Gustave_Les-Trois-Contes.xml\n",
       "File done : 1866_Feuillet-Octave_Monsieur-de-Camors.xml\n",
       "File done : 1932_Simenon-Georges_L-Affaire-Saint-Fiacre.xml\n",
+      "File done : 1848_Balzac-Honore-de_Les-Parents-pauvres-Le-Cousin-PonsFC.xml\n",
       "File done : 1843_Desnoyers-Louis_Les-aventures-de-Jean-Paul-Choppart.xml\n",
       "File done : 1845_Dumas-Alexandre_Vingt-ans-apres.xml\n",
       "File done : 1996_Darrieussecq-Marie_Truismes.xml\n",
@@ -842,17 +845,18 @@
       "File done : 1998_Germain-Sylvie_Tobie-des-marais.xml\n",
       "File done : 1935_Leblanc-Maurice_La-Cagliostro-se-venge.xml\n",
       "File done : 2013_Ferney-Alice_Cherchez-La-Femme.xml\n",
-      "File done : 1890_Gourmont-Remy-de_Sixtine--roman-de-la-vie-cerebrale.xml\n",
-      "File done : 1875_Feval-Paul-(pere)_La-Ville-Vampire-(ou-bien-le-malheur-d-ecrire-des-romans-noirs).xml\n",
-      "File done : 2010_Enard-Mathias_Parle-leur-de-batailles-de-rois-et-d-elephants.xml\n",
-      "File done : 1923_Larbaud-Valery_Amants-heureux-amants.xml\n",
-      "File done : 1965_Perec-Georges_Les-choses.xml\n"
+      "File done : 1890_Gourmont-Remy-de_Sixtine--roman-de-la-vie-cerebrale.xml\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "File done : 1875_Feval-Paul-(pere)_La-Ville-Vampire-(ou-bien-le-malheur-d-ecrire-des-romans-noirs).xml\n",
+      "File done : 2010_Enard-Mathias_Parle-leur-de-batailles-de-rois-et-d-elephants.xml\n",
+      "File done : 1923_Larbaud-Valery_Amants-heureux-amants.xml\n",
+      "File done : 1965_Perec-Georges_Les-choses.xml\n",
+      "File done : 1846_Balzac-Honore-de_Une-tenebreuse-affaireFC.xml\n",
       "File done : 1888_Verne-Jules_Deux-ans-de-vacances.xml\n",
       "File done : 1954_Reage-Pauline_Histoire-d-O.xml\n",
       "File done : 1858_Dumas-Alexandre-Pere_sultanetta.xml\n",
@@ -887,12 +891,12 @@
       "File done : 1908_Barbusse-Henri_L-enfer.xml\n",
       "File done : 1996_Gailly-Christian_L-Incident.xml\n",
       "File done : 1957_Malet-Leo_Boulevard-ossements.xml\n",
-      "File done : 1955_Dhotel-Andre_Le-pays-où-l-on-n-arrive-jamais.xml\n",
       "File done : 1900_Mirbeau-Octave_Le-journal-d-une-femme-de-chambre.xml\n",
       "File done : 1969_Marceau-Felicien_Creezy.xml\n",
       "File done : 1872_Sand-George_Nanon.xml\n",
       "File done : 1897_Bloy-Leon_La-Femme-pauvre.xml\n",
       "File done : 1938_Gracq-Julien_Au-chateau-d-Argol.xml\n",
+      "File done : 1901_Mael-Pierre_Un-mousse-de-Surcouf.xml\n",
       "File done : 1854_Dumas-Alexandre-Pere_Le-page-du-duc-de-Savoie-I.xml\n",
       "File done : 1846_Sand-George_La-Mare-au-Diable.xml\n",
       "File done : 1881_Loti-Pierre_Le-roman-d-un-spahi.xml\n",
@@ -912,6 +916,7 @@
       "File done : 1901_Lorrain-Jean_Monsieur-de-Phocas-Astarta--Roman.xml\n",
       "File done : 1876_Greville-Henry_Dosia.xml\n",
       "File done : 1972_Modiano-Patrick_Les-boulevards-de-ceinture.xml\n",
+      "File done : 2004_Angot-Christine_Une-partie-du-coeur.xml\n",
       "File done : 1858_Souvestre-Emile_Scenes-de-la-chouannerie.xml\n",
       "File done : 1995_Kristof-Agota_Hier.xml\n",
       "File done : 1859_Segur-comtesse-de_Les-Vacances.xml\n",
@@ -948,6 +953,7 @@
       "File done : 1911_Marchal-Gustave_Tante-Meteore.xml\n",
       "File done : 1860_Noriac-Jules_La-betise-humaine.xml\n",
       "File done : 1937_Malraux-Andre_L-espoir.xml\n",
+      "File done : 1858_Ponson-du-Terrail-Pierre_Rocambole-Le-Club-des-valets-de-coeur-Tome-I.xml\n",
       "File done : 1998_Jonquet-Thierry_Moloch.xml\n",
       "File done : 1957_Celine-Louis-Ferdinand_D-un-chateau-L-autre.xml\n",
       "File done : 1845_Dumas-Alexandre_La-Reine-Margot.xml\n",
