--- a/global_table.ipynb
+++ b/global_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,15 @@
     "import IPython\n",
     "import argparse\n",
     "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums=['I ','V ','X ','C ','L ','I.','V.','X.','C.','L.','1','2','3','4','5','6','7','8','9','0']"
    ]
   },
   {
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -399,14 +408,14 @@
       "File done : 1845_Sand-George_Le-meunier-d-Angibault.xml\n",
       "File done : 1864_ Verne-Jules_Voyage-au-centre-de-la-Terre.xml\n",
       "File done : 2013_Rolin-Jean_Ormuz.xml\n",
-      "File done : 1914_Roussel-Raymond_Locus-Solus.xml\n"
+      "File done : 1914_Roussel-Raymond_Locus-Solus.xml\n",
+      "File done : 1887_Guy-de-Maupassant_Pierre-et-Jean.xml\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File done : 1887_Guy-de-Maupassant_Pierre-et-Jean.xml\n",
       "File done : 1933_Leblanc-Maurice_Victor-de-la-Brigade-mondaine.xml\n",
       "File done : 1911_Apollinaire-Guillaume_Les-exploits-d-un-jeune-don-Juan.xml\n",
       "File done : 1998_Rouaud-Jean_Pour-vos-cadeaux.xml\n",
@@ -740,7 +749,6 @@
       "File done : 1867_Vigny-Alfred-de_La-vie-et-la-mort-du-capitaine-Renaud-ou-La-canne-de-jonc--souvenirs-de-grandeur-militaire.xml\n",
       "File done : 1941_Mac-Orlan-Pierre_L-Ancre-de-misericorde.xml\n",
       "File done : 1869_Flaubert-Gustave_L-Education-sentimentale.xml\n",
-      "File done : 1952_Blondin-Antoine_Les-Enfants-Du-Bon-Dieu.xml\n",
       "File done : 1984_Djian-Philippe_Zone-erogene.xml\n",
       "File done : 1840_Granier-de-Cassagnac-Adolphe_Danae.xml\n",
       "File done : 1917_Mac-Orlan-Pierre_Le-chant-de-l-equipage.xml\n",
@@ -845,15 +853,15 @@
       "File done : 1998_Germain-Sylvie_Tobie-des-marais.xml\n",
       "File done : 1935_Leblanc-Maurice_La-Cagliostro-se-venge.xml\n",
       "File done : 2013_Ferney-Alice_Cherchez-La-Femme.xml\n",
-      "File done : 1890_Gourmont-Remy-de_Sixtine--roman-de-la-vie-cerebrale.xml\n"
+      "File done : 1890_Gourmont-Remy-de_Sixtine--roman-de-la-vie-cerebrale.xml\n",
+      "File done : 1875_Feval-Paul-(pere)_La-Ville-Vampire-(ou-bien-le-malheur-d-ecrire-des-romans-noirs).xml\n",
+      "File done : 2010_Enard-Mathias_Parle-leur-de-batailles-de-rois-et-d-elephants.xml\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File done : 1875_Feval-Paul-(pere)_La-Ville-Vampire-(ou-bien-le-malheur-d-ecrire-des-romans-noirs).xml\n",
-      "File done : 2010_Enard-Mathias_Parle-leur-de-batailles-de-rois-et-d-elephants.xml\n",
       "File done : 1923_Larbaud-Valery_Amants-heureux-amants.xml\n",
       "File done : 1965_Perec-Georges_Les-choses.xml\n",
       "File done : 1846_Balzac-Honore-de_Une-tenebreuse-affaireFC.xml\n",
@@ -986,20 +994,32 @@
     "            dic_stats['sentence_count']=len(tree.findall(\".//word[@postag='PUNsent']\"))\n",
     "            dic_stats['verb_count']=len(tree.findall(\".//word[@postag='VERB']\"))\n",
     "            titles_book=0\n",
+    "            num_book=0\n",
     "            for element in tree.findall(\".//div[@type='book'][@title]\"):\n",
     "                if len(element.attrib[\"title\"])>3:\n",
     "                    titles_book+=1\n",
+    "                if any(num in element.attrib[\"title\"] for num in nums):\n",
+    "                    num_book+=1\n",
     "            titles_part=0\n",
+    "            num_part=0\n",
     "            for element in tree.findall(\".//div[@type='part'][@title]\"):\n",
     "                if len(element.attrib[\"title\"])>3:\n",
     "                    titles_part+=1\n",
+    "                if any(num in element.attrib[\"title\"] for num in nums):\n",
+    "                    num_part+=1\n",
     "            titles_chap=0\n",
+    "            num_chap=0\n",
     "            for element in tree.findall(\".//div[@type='chapter'][@title]\"):\n",
     "                if len(element.attrib[\"title\"])>3:\n",
     "                    titles_chap+=1\n",
+    "                if any(num in element.attrib[\"title\"] for num in nums):\n",
+    "                    num_chap+=1\n",
     "            dic_stats['titled_book_count']=titles_book\n",
     "            dic_stats['titled_part_count']=titles_part\n",
     "            dic_stats['titled_chapter_count']=titles_chap\n",
+    "            dic_stats['numbered_book_count']=num_book\n",
+    "            dic_stats['numbered_part_count']=num_part\n",
+    "            dic_stats['numbered_chapter_count']=num_chap\n",
     "            headers=list(dic_stats.keys())\n",
     "            writer = csv.DictWriter(f, delimiter=',', lineterminator='\\n',fieldnames=headers)\n",
     "            if (count_header==0):\n",
