update length sentences

--- a/global_table.ipynb
+++ b/global_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,79 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File done : 1858_Segur-comtesse-de_Les-Malheurs-de-Sophie.xml\n",
-      "File done : 1850_Dumas-Alexandre_Le-Vicomte-de-Bragelonne.xml\n",
-      "File done : 2014_Volodine-Antoine_Terminus-radieux.xml\n",
-      "File done : 1909_Boylesve-Rene_La-jeune-fille-bien-elevee.xml\n",
-      "File done : 1872_Zola-Emile_La-curee.xml\n",
-      "File done : 1861_Erckmann-Chatrian_Confidences-d-un-joueur-de-clarinette.xml\n",
-      "File done : 1920_Toulet-Paul-Jean_La-jeune-fille-verte-roman.xml\n",
-      "File done : 1961_Troyat-Henri_La-gloire-des-vaincus.xml\n",
-      "File done : 1888_Malot-Hector_Conscience.xml\n",
-      "File done : 1944_Aragon-Louis_Aurelien.xml\n",
-      "File done : 1951_Rebatet-Lucien_Les-Deux-Etendards.xml\n",
-      "File done : 1991_Bauchau-Henry_Diotime-et-les-lions.xml\n",
-      "File done : 1847_Collin-de-Plancy-Jacques-Albin-Simon-(1794-1881)_Legende-du-Juif-Errant.xml\n",
-      "File done : 1861_Rocca-Maria-della-(nee-Embden-Heine-pseud-Camille-Henry-Princesse)_Le-Roman-d-une-femme-laide.xml\n",
-      "File done : 1977_Ernaux-Annie_Ce-qu-ils-disent-ou-rien.xml\n",
-      "File done : 1843_Doutre-Joseph_Les-fiances-de-1812.xml\n",
-      "File done : 1949_Simenon-Georges_Mon-ami-Maigret.xml\n",
-      "File done : 1897_Roussel-Raymond_La-doublure.xml\n",
-      "File done : 1994_Rolin-Olivier_Port-Soudan.xml\n",
-      "File done : 1921_Leroux-Gaston_Cheri-Bibi-et-Cecily.xml\n",
-      "File done : 1972_A.D.G._Cradoque-s-band.xml\n",
-      "File done : 1880_Karr-Alphonse_Bourdonnements.xml\n",
-      "File done : 1847_Sandeau-Jules_Mademoiselle-de-la-Seigli__re-Volume-1.xml\n",
-      "File done : 1909_Giraudoux-Jean_Provinciales.xml\n",
-      "File done : 1959_Sarraute-Nathalie_Le-Planetarium.xml\n",
-      "File done : 1994_Chevillard-Eric_Prehistoire.xml\n",
-      "File done : 1845_Merimee-Prosper_Carmen.xml\n",
-      "File done : 1931_Saint-Exupery-Antoine-de_Vol-de-nuit.xml\n",
-      "File done : 1877_Goncourt-Edmond-et-Jules-de_La-fille-Elisa.xml\n",
-      "File done : 1935_Duhamel-Georges_La-nuit-de-la-Saint-Jean.xml\n",
-      "File done : 1942_Vercors_Le-silence-de-la-mer.xml\n",
-      "File done : 1930_Galopin-Arnould_Le-sergent-Bucaille.xml\n",
-      "File done : 1929_Dabit-Eugene_L-Hotel-du-Nord.xml\n",
-      "File done : 1865_Erckmann-Chatrian_Histoire-d-un-homme-du-peuple.xml\n",
-      "File done : 1907_Segalen-Victor_Les-Immemoriaux.xml\n",
-      "File done : 1909_Leblanc-Maurice_L-Aiguille-creuse.xml\n",
-      "File done : 1999_Echenoz-Jean_Je-m-en-vais.xml\n",
-      "File done : 1962_Simenon-Georges_Maigret-et-les-braves-gens.xml\n",
-      "File done : 1863_Fromentin-Eugene_Dominique.xml\n",
-      "File done : 1987_Chevillard-Eric_Mourir-m-enrhume.xml\n",
-      "File done : 2010_Volodine-Andoine-(pseudonyme--Lutz-Bassmann)_Les-aigles-puent.xml\n",
-      "File done : 2001_Rufin-Jean-Christophe_Rouge-Bresil.xml\n",
-      "File done : 1967_Perec-Georges_Un-homme-qui-dort.xml\n",
-      "File done : 1909_Colette_L-Ingenue-libertine.xml\n",
-      "File done : 1886_Loti-Pierre_Pecheur-d-Islande.xml\n",
-      "File done : 1899_Adam-Paul_La-Force.xml\n",
-      "File done : 1926_Mac-Orlan-Pierre_Les-clients-du-Bon-Chien-Jaune.xml\n",
-      "File done : 1967_Simenon-Georges_Le-voleur-de-Maigret.xml\n",
-      "File done : 1848_Balzac-Honore-de_Les-Parents-pauvres-La-Cousine-BetteFC.xml\n",
-      "File done : 1957_Pagnol-Marcel_Le-Chateau-de-ma-mere.xml\n",
-      "File done : 1956_Thomas-Henri_La-nuit-de-Londres.xml\n",
-      "File done : 1890_Pont-Jest-Rene-de_Le-Fleuve-des-perles-(L-araignee-Rouge).xml\n",
-      "File done : 1887_Verne-Jules_Nord-contre-Sud.xml\n",
-      "File done : 2002_Rolin-Olivier_Tigre-en-papier.xml\n",
-      "File done : 1881_Verne-Jules-_La-Jangada-huit-cent-lieues-sur-l-Amazone].xml\n",
-      "File done : 1954_Cohen-Albert_Le-livre-de-ma-mere.xml\n",
-      "File done : 1923_Malot-Hector_Romain-Kalbris.xml\n",
-      "File done : 1995_Bergounioux-Pierre_Miette.xml\n",
-      "File done : 1947_Antelme-Robert_l-espece-humaine.xml\n",
-      "File done : 1955_San-Antonio_Le-fil-a-couper-le-beurre.xml\n",
-      "File done : 1912_Loti-Pierre_Un-pelerin-d-Angkor.xml\n",
-      "File done : 1919_Bazin-Rene_Les-Nouveaux-Oberle.xml\n",
-      "File done : 1891_Huysmans-Joris-Karl_La-bas.xml\n",
-      "File done : 1949_San-Antonio_Reglez-lui-son-compte-.xml\n",
-      "File done : 1933_Leblanc-Maurice_La-femme-aux-deux-sourires.xml\n",
-      "File done : 1892_Loti-Pierre_Fantome-d-Orient.xml\n"
+      "index à 0\n",
+      "[44, 2, 5, 13, 11, 14, 34, 2, 10, 6, 1, 15, 36, 27, 26, 25, 13, 1, 8, 1, 5, 1, 16, 20, 20, 1, 6, 15, 1, 17, 22, 1, 4, 1, 17, 8, 13, 26, 12, 12, 1, 11, 2, 8, 1, 17, 2, 16, 23, 16, 24, 38, 11, 1, 7, 11, 10, 3, 24, 15, 18, 3, 11, 23, 28, 6, 13, 15, 12, 6, 43, 19, 30, 7, 21, 8, 33, 29, 8, 27, 24, 30, 9, 24, 37, 9, 15, 1, 16, 1, 7, 21, 66, 14, 19, 56, 27, 53, 9, 33, 34, 27, 28, 50, 37, 1, 24, 2, 24, 1, 8, 9, 13, 12, 9, 20, 65, 20, 26, 13, 13, 17, 21, 42, 25, 49, 20, 11, 16, 24, 35, 15, 14, 32, 19, 27, 30, 37, 37, 87, 26, 15, 91, 50, 24, 22, 11, 19, 22, 41, 6, 18, 19, 30, 20, 39, 21, 19, 19, 60, 7, 49, 32, 44, 20, 20, 13, 28, 16, 19, 24, 23, 35, 20, 18, 21, 3, 3, 47, 48, 5, 3, 32, 1, 20, 32, 7, 8, 14, 6, 30, 41, 20, 31, 19, 46, 19, 58, 30, 30, 15, 17, 14, 30, 13, 30, 31, 23, 1, 15, 3, 15, 10, 32, 25, 20, 11, 31, 1, 37, 3, 19, 1, 12, 3, 33, 23, 22, 21, 45, 19, 27, 31, 19, 34, 11, 29, 55, 21, 24, 15, 12, 6, 22, 19, 68, 38, 11, 17, 20, 16, 62, 15, 46, 29, 26, 1, 10, 1, 12, 1, 16, 1, 30, 1, 13, 1, 17, 9, 48, 45, 17, 10, 4, 11, 4, 26, 6, 28, 4, 11, 1, 19, 1, 11, 29, 22, 47, 48, 15, 16, 31, 9, 54, 45, 77, 25, 37, 15, 18, 60, 41, 6, 22, 13, 33, 12, 25, 39, 26, 56, 32, 32, 17, 18, 13, 18, 46, 16, 31, 20, 3, 41, 3, 19, 1, 14, 18, 3, 28, 23, 15, 7, 3, 11, 3, 40, 1, 9, 16, 2, 3, 12, 17, 18, 20, 18, 20, 17, 28, 11, 16, 24, 25, 17, 12, 5, 24, 21, 6, 10, 10, 19, 14, 15, 24, 12, 24, 28, 14, 18, 14, 20, 18, 37, 35, 32, 49, 7, 39, 9, 34, 18, 28, 14, 27, 15, 36, 19, 5, 22, 4, 3, 19, 8, 3, 12, 5, 8, 3, 9, 3, 25, 10, 3, 15, 35, 46, 16, 19, 10, 27, 55, 41, 17, 59, 20, 8, 26, 30, 1, 28, 67, 92, 23, 3, 31, 32, 7, 33, 29, 19, 2, 15, 10, 14, 15, 44, 16, 14, 10, 19, 4, 18, 24, 15, 39, 20, 14, 17, 12, 15, 14, 44, 19, 26, 12, 18, 8, 10, 32, 30, 42, 19, 53, 9, 16, 23, 14, 8, 21, 70, 22, 36, 34, 20, 25, 40, 19, 30, 8, 22, 1, 22, 32, 8, 81, 1, 15, 1, 22, 1, 16, 12, 1, 18, 1, 17, 3, 23, 1, 15, 23, 25, 1, 11, 8, 9, 19, 1, 9, 1, 12, 15, 37, 25, 10, 15, 19, 10, 7, 26, 31, 22, 50, 41, 26, 34, 19, 10, 8, 10, 15, 1, 18, 15, 2, 15, 4, 22, 7, 19, 3, 10, 1, 11, 4, 2, 3, 15, 19, 1, 22, 17, 21, 13, 21, 51, 32, 11, 8, 9, 1, 28, 1, 21, 8, 1, 17, 7, 1, 13, 46, 15, 12, 1, 20, 10, 1, 21, 1, 9, 11, 1, 6, 7, 10, 1, 7, 12, 1, 28, 33, 21, 39, 42, 21, 26, 9, 9, 31, 25, 23, 30, 8, 12, 18, 1, 12, 2, 41, 14, 18, 13, 19, 16, 24, 13, 1, 6, 2, 5, 36, 8, 44, 49, 10, 32, 36, 36, 23, 12, 20, 11, 11, 24, 11, 6, 26, 1, 19, 8, 24, 7, 13, 11, 34, 55, 25, 25, 27, 10, 25, 51, 18, 63, 45, 24, 16, 24, 16, 28, 14, 1, 7, 1, 33, 1, 9, 1, 5, 1, 5, 1, 9, 10, 7, 6, 13, 3, 3, 25, 4, 14, 17, 1, 15, 7, 10, 4, 6, 3, 17, 60, 31, 9, 15, 3, 3, 9, 1, 11, 3, 21, 1, 10, 7, 8, 27, 3, 3, 28, 48, 49, 6, 3, 8, 4, 10, 3, 14, 10, 7, 44, 15, 18, 13, 14, 24, 40, 37, 42, 57, 27, 19, 28, 23, 13, 27, 17, 15, 1, 20, 10, 18, 14, 8, 1, 21, 1, 8, 25, 1, 15, 1, 26, 35, 17, 10, 62, 51, 14, 26, 1, 13, 12, 48, 17, 24, 37, 49, 58, 26, 28, 12, 11, 27, 27, 17, 10, 33, 15, 6, 28, 3, 158, 28, 54, 22, 8, 20, 36, 27, 21, 17, 19, 1, 19, 1, 25, 6, 13, 3, 22, 1, 19, 11, 10, 41, 20, 19, 22, 12, 5, 32, 26, 10, 13, 16, 21, 31, 33, 10, 14, 34, 3, 10, 21, 31, 49, 7, 15, 44, 25, 10, 12, 40, 14, 26, 11, 14, 1, 10, 31, 3, 24, 3, 14, 1, 27, 15, 11, 9, 7, 3, 14, 10, 10, 3, 20, 5, 11, 6, 26, 48, 21, 70, 74, 1, 21, 3, 16, 24, 29, 8, 1, 7, 3, 10, 52, 11, 3, 33, 9, 20, 3, 33, 18, 26, 53, 20, 12, 18, 20, 18, 28, 24, 39, 23, 15, 15, 18, 33, 17, 15, 8, 9, 19, 5, 16, 19, 3, 26, 1, 30, 19, 16, 21, 15, 21, 10, 2, 14, 1, 7, 17, 1, 13, 13, 16, 12, 14, 25, 25, 9, 13, 15, 4, 19, 2, 49, 29, 7, 16, 16, 15, 1, 29, 1, 15, 15, 1, 21, 18, 25, 23, 26, 8, 11, 1, 4, 3, 3, 6, 1, 10, 4, 22, 1, 25, 5, 11, 10, 17, 11, 22, 27, 15, 12, 19, 21, 8, 33, 8, 31, 19, 10, 6, 22, 27, 12, 32, 16, 28, 11, 30, 35, 31, 110, 6, 14, 9, 10, 67, 6, 21, 9, 11, 13, 17, 42, 51, 20, 21, 1, 38, 12, 1, 15, 28, 12, 33, 7, 24, 10, 3, 6, 3, 21, 3, 20, 21, 12, 29, 21, 16, 6, 35, 59, 7, 9, 31, 17, 45, 58, 53, 35, 42, 22, 48, 26, 18, 6, 22, 36, 2, 61, 95, 41, 18, 21, 35, 3, 8, 16, 3, 44, 17, 3, 22, 20, 27, 29, 24, 1, 11, 1, 6, 1, 10, 20, 1, 10, 1, 8, 28, 11, 15, 20, 26, 20, 8, 29, 1, 15, 1, 5, 3, 13, 8, 1, 13, 3, 40, 21, 8, 6, 32, 20, 7, 10, 17, 2, 26, 1, 11, 1, 9, 1, 19, 47, 10, 17, 7, 19, 9, 31, 10, 9, 1, 10, 1, 9, 61, 1, 3, 7, 16, 10, 26, 31, 1, 6, 3, 1, 5, 4, 1, 8, 3, 13, 1, 10, 1, 8, 6, 16, 22, 13, 1, 17, 3, 32, 1, 17, 3, 19, 31, 36, 2, 25, 1, 16, 12, 25, 1, 17, 3, 29, 32, 32, 16, 38, 11, 7, 15, 23, 19, 40, 8, 40, 34, 8, 8, 6, 5, 19, 3, 5, 9, 38, 31, 18, 19, 50, 23, 21, 17, 10, 8, 7, 9, 13, 16, 32, 30, 17, 6, 21, 18, 14, 11, 16, 14, 22, 31, 8, 9, 12, 19, 24, 20, 23, 25, 37, 19, 23, 63, 96, 1, 8, 3, 22, 1, 10, 3, 13, 9, 15, 1, 12, 3, 12, 1, 13, 3, 18, 18, 20, 19, 10, 5, 10, 21, 10, 27, 100, 5, 22, 20, 18, 12, 56, 91, 63, 22, 16, 22, 15, 11, 3, 17, 2, 17, 29, 68, 8, 12, 14, 13, 3, 24, 3, 13, 3, 4, 26, 42, 27, 17, 25, 31, 19, 19, 24, 9, 21, 17, 18, 10, 18, 47, 22, 10, 38, 30, 76, 12, 33, 31, 6, 13, 6, 13, 1, 9, 13, 1, 54, 1, 27, 13, 1, 32, 9, 11, 1, 8, 3, 25, 4, 8, 4, 11, 16, 1, 15, 21, 1, 53, 12, 15, 3, 6, 21, 4, 1, 3, 1, 23, 14, 16, 21, 1, 18, 3, 36, 18, 3, 7, 24, 13, 5, 11, 47, 3, 7, 5, 18, 3, 5, 17, 3, 8, 30, 9, 20, 9, 9, 3, 58, 19, 33, 29, 23, 1, 23, 11, 54, 1, 21, 1, 25, 1, 8, 1, 16, 3, 15, 11, 1, 20, 33, 1, 7, 1, 6, 25, 27, 22, 34, 3, 16, 12, 5, 13, 1, 13, 1, 11, 1, 12, 1, 13, 21, 5, 18, 28, 17, 12, 1, 7, 8, 1, 11, 6, 33, 22, 10, 11, 51, 15, 10, 17, 8, 1, 17, 9, 6, 1, 14, 8, 5, 4, 4, 2, 8, 9, 1, 34, 5, 3, 20, 1, 5, 10, 14, 1, 14, 20, 1, 15, 1, 12, 24, 6, 14, 10, 10, 27, 9, 10, 3, 16, 1, 15, 3, 29, 1, 28, 3, 25, 1, 19, 7, 16, 27, 11, 36, 15, 6, 8, 6, 1, 19, 1, 5, 15, 15, 15, 24, 38, 58, 29, 12, 18, 37, 20, 12, 1, 29, 19, 5, 24, 1, 16, 1, 10, 1, 28, 1, 13, 24, 16, 20, 31, 36, 11, 18, 21, 27, 5, 28, 35, 10, 25, 8, 14, 5, 1, 13, 1, 8, 11, 16, 1, 15, 1, 53, 1, 19, 15, 1, 12, 1, 15, 1, 13, 18, 11, 36, 11, 1, 11, 3, 6, 42, 3, 17, 16, 3, 5, 11, 13, 3, 14, 7, 42, 23, 4, 3, 10, 42, 3, 19, 18, 3, 12, 4, 13, 3, 18, 8, 2, 14, 19, 13, 7, 21, 13, 28, 26, 3, 8, 5, 3, 14, 16, 8, 8, 5, 43, 43, 20, 1, 12, 4, 4, 14, 14, 9, 24, 1, 16, 19, 13, 25, 10, 4, 14, 33, 14, 13, 39, 1, 11, 29, 14, 35, 16, 43, 12, 17, 22, 10, 47, 1, 16, 15, 32, 1, 35, 29, 21, 19, 16, 1, 7, 11, 7, 1, 7, 1, 12, 1, 8, 1, 19, 77, 27, 1, 17, 19, 18, 1, 21, 1, 12, 9, 17, 25, 8, 27, 9, 12, 55, 23, 20, 8, 29, 33, 1, 30, 6, 20, 1, 11, 8, 40, 1, 25, 25, 18, 10, 6, 6, 3, 17, 17, 30, 3, 6, 17, 11, 26, 37, 14, 5, 16, 6, 3, 20, 1, 25, 3, 24, 17, 23, 12, 7, 1, 15, 5, 4, 74, 22, 24, 22, 14, 21, 13, 27, 5, 11, 1, 25, 5, 15, 1, 11, 3, 37, 1, 11, 7, 3, 54, 9, 8, 4, 37, 1, 7, 22, 12, 27, 28, 35, 8, 12, 6, 8, 3, 16, 4, 17, 1, 17, 41, 21, 39, 18, 24, 7, 19, 14, 7, 16, 22, 35, 10, 1, 5, 12, 1, 10, 1, 12, 1, 22, 1, 8, 1, 5, 5, 28, 47, 19, 36, 18, 24, 16, 15, 11, 15, 16, 1, 8, 15, 6, 3, 11, 16, 17, 22, 6, 17, 17, 20, 13, 15, 17, 1, 10, 4, 18, 45, 19, 10, 27, 32, 13, 1, 11, 3, 23, 12, 1, 15, 3, 17, 52, 3, 7, 15, 19, 13, 10, 17, 14, 20, 45, 1, 10, 15, 1, 15, 6, 1, 23, 1, 6, 12, 1, 9, 1, 13, 1, 20, 11, 1, 1, 13, 14, 8, 1, 31, 3, 1, 6, 8, 6, 12, 19, 1, 31, 16, 14, 40, 23, 41, 3, 9, 7, 1, 8, 36, 45, 1, 15, 10, 1, 12, 14, 15, 24, 7, 24, 10, 41, 8, 1, 5, 5, 12, 1, 13, 9, 11, 9, 18, 7, 1, 30, 1, 9, 15, 1, 10, 33, 19, 14, 19, 17, 17, 15, 17, 22, 39, 17, 31, 10, 51, 24, 12, 33, 22, 51, 35, 38, 40, 14, 22, 17, 22, 44, 15, 19, 1, 13, 25, 2, 7, 9, 26]\n",
+      "File done : 1858_Segur-comtesse-de_Les-Malheurs-de-Sophie.xml\n"
      ]
     },
     {
@@ -146,7 +83,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-897dfcff8507>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0mdic_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'glob_il'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//word[@form='il']\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m             \u001b[0mdic_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'glob_ils'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//word[@form='ils']\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m             \u001b[0mdic_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'glob_elle'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//word[@form='elle']\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m             \u001b[0mdic_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'glob_elles'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//word[@form='elles']\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m             \u001b[0mdic_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'glob_je'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//word[@form='je']\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-19-f7b79640ec6f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     40\u001b[0m             \u001b[0mdic_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'glob_chapter'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//div[@type='chapter']\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[0mdic_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'glob_paragraph'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//p\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m             \u001b[0mdic_stats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'glob_sentence'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//word[@postag='PUNsent']\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m             \u001b[0mindexes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0msent\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfindall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".//word[@postag='PUNsent']\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -194,6 +131,20 @@
     "            dic_stats['glob_chapter']=len(tree.findall(\".//div[@type='chapter']\"))\n",
     "            dic_stats['glob_paragraph']=len(tree.findall(\".//p\"))\n",
     "            dic_stats['glob_sentence']=len(tree.findall(\".//word[@postag='PUNsent']\"))\n",
+    "            indexes=list()\n",
+    "            for sent in tree.findall(\".//word[@postag='PUNsent']\"):\n",
+    "                indexes.append(sent.getparent().index(sent))\n",
+    "                #print(sent.getparent().index(sent))\n",
+    "            words_between=list()\n",
+    "            for idx, index in enumerate(indexes):\n",
+    "                if idx == 0:\n",
+    "                    words_between.append(indexes[idx]-1)\n",
+    "                    words_between.append(indexes[idx+1]-indexes[idx]-1)\n",
+    "                    print('index à 0')\n",
+    "                elif idx < len(indexes)-1 :\n",
+    "                    if indexes[idx]<indexes[idx+1]:\n",
+    "                        words_between.append(indexes[idx+1]-indexes[idx]-1)\n",
+    "            print(words_between)\n",
     "            dic_stats['glob_verb']=len(tree.findall(\".//word[@postag='VERB']\"))\n",
     "            dic_stats['glob_adverb']=len(tree.xpath(\".//word[starts-with(@postag, 'ADV')]\"))\n",
     "            dic_stats['glob_adj']=len(tree.xpath(\".//word[starts-with(@postag, 'ADJ')]\"))\n",
@@ -271,7 +222,6 @@
     "            dic_stats['last_etat']=len(last_chap.xpath(\".//word[@lemma='être' or @lemma='sembler' or @lemma='devenir' or @lemma='demeurer' or @lemma='rester' ]\"))\n",
     "            dic_stats['last_voc']=len(set(last_chap.xpath(\".//word/@lemma\")))\n",
     "            dic_stats['last_ten_word']=len(last_ten.findall(\".//word\"))\n",
-    "            dic_stats['last_ten_paragraph']=len(last_ten.findall(\".//p\"))\n",
     "            dic_stats['last_ten_sentence']=len(last_ten.findall(\".//word[@postag='PUNsent']\"))\n",
     "            dic_stats['last_ten_verb']=len(last_ten.findall(\".//word[@postag='VERB']\"))\n",
     "            dic_stats['last_ten_adverb']=len(last_ten.xpath(\".//word[starts-with(@postag, 'ADV')]\"))\n",
